# bruges

./: .buildinfo  .gitignore  .travis.yml  AUTHORS.md  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  MANIFEST  README.md  README.rst  README.txt  REQUIREMENTS.txt  __init__.py  agilegeo.attribute.html  agilegeo.avo.html  agilegeo.html  agilegeo.util.html  agilegeo.wavelet.html  authors.html  bruges-filters-1.py  bruges-filters-2.py  bruges-filters-3.py  bruges-filters-4.py  bruges-filters-6.py  bruges-filters-7.py  bruges-filters-8.py  bruges.attribute.html  bruges.filters.html  bruges.html  bruges.models.html  bruges.noise.html  bruges.petrophysics.html  bruges.reflection.html  bruges.rockphysics.html  bruges.transform.html  bruges.unit.html  bruges.util.html  changelog.html  contributing.html  contributors.md  (+16 more)
.doctrees/: authors.doctree  bruges.attribute.doctree  bruges.doctree  bruges.filters.doctree  bruges.models.doctree  bruges.noise.doctree  bruges.petrophysics.doctree  bruges.reflection.doctree  bruges.rockphysics.doctree  bruges.transform.doctree  bruges.unit.doctree  bruges.util.doctree  changelog.doctree  contributing.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree
_modules/: index.html
_notebooks/: Getting_started_wedge_model.html  Quick_start.html  Quick_start_new.html
_sources/: agilegeo.attribute.txt  agilegeo.avo.txt  agilegeo.util.txt  authors.md.txt  development.md.txt  index.rst.txt  index.txt  license.md.txt
agilegeo/: __init__.py  _version.py
api/: bruges-filters-1.py  bruges-filters-10.py  (+17 more)
(+295 files in other folders)
