[metadata]
name = bruges
version = attr: bruges.__version__
author = The Bruges Authors
author_email = hello@agilescientific.com
description = A library of geophysical equations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agilescientific/bruges
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages =
    bruges
    bruges.attribute
    bruges.filters
    bruges.models
    bruges.noise
    bruges.reflection
    bruges.petrophysics
    bruges.rockphysics
    bruges.transform
    bruges.unit
    bruges.util
python_requires = >=3.6
install_requires =
    numpy<2
    scipy

[options.extras_require]
docs = sphinx; sphinxcontrib-apidoc; myst_nb; furo; matplotlib
test = pytest; pytest-cov; pytest-mpl
dev = build; pytest; pytest-cov; pytest-mpl; sphinx; sphinxcontrib-apidoc; myst_nb; furo; matplotlib
